# logtap

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  logtap.toml
.github/workflows/: ci.yml  pr-branch-policy.yml
src/: config.rs  filter.rs  lib.rs  main.rs  parser.rs  record.rs  sink.rs  source.rs
tests/: cli_test.rs  filter_test.rs  integration_test.rs  notify_test.rs  parser_test.rs  sink_test.rs  source_test.rs  stress_test.rs  test_source.rs
