[package]
name = "logtap"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
toml = "1.1.3+spec-1.1.0"
clap = { version = "4.6.2", features = ["derive"] }

[profile.release]
strip = true
lto = "thin"